[package]
name = "vox_render-rs"
version = "0.1.0"
authors = ["yangfeng <yangfengzzz@hotmail.com>"]
edition = "2018"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
wgpu = "0.8.1"
winit = { version = "0.24", features = ["web-sys"] }
bytemuck = { version = "1.4", features = ["derive"] }
cgmath = "0.18"
log = "0.4"
image = "0.23"
async-executor = "1.0"
pollster = "0.2"
env_logger = "0.8"
